# merely3d

./: CMakeLists.txt
cmake/: embed_shaders.cmake
examples/: CMakeLists.txt
examples/demo/: main.cpp
examples/particles/: main.cpp
include/merely3d/: camera.hpp  camera_controller.hpp  color.hpp  events.hpp  frame.hpp  key_event.hpp  material.hpp  mesh.hpp  primitives.hpp  renderable.hpp  types.hpp  window.hpp
shaders/: default_fragment.glsl  default_vertex.glsl  particle_fragment.glsl  particle_geometry.glsl  particle_vertex.glsl
src/: command_buffer.hpp  event_convert.hpp  frame.cpp  frame.hpp  gl_particle_buffer.hpp  gl_primitive.hpp  gl_triangle_mesh.hpp  key_convert.hpp  main.cpp  mesh.cpp  mesh_util.hpp  renderer.cpp  renderer.hpp  renderers.cpp  renderers.hpp  shader.cpp  shader.hpp  shader_collection.cpp  shader_collection.hpp  triangle_primitive_renderer.cpp  triangle_primitive_renderer.hpp  types.hpp  window.cpp  window.hpp
test/: mesh_utils.cpp
